# certobot

./: .env  .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
.kiro/specs/certobot-whatsapp-debt-collection/: design.md  requirements.md  tasks.md
backend/: main.py
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/core/: database.py  logging.py  redis.py  settings.py
backend/models/: __init__.py
backend/modules/: __init__.py
backend/modules/crm/: __init__.py
backend/modules/negotiation/: __init__.py
backend/modules/payment/: __init__.py
backend/modules/validation/: __init__.py  cpf_validator.py
backend/modules/whatsapp/: __init__.py
docker/: Dockerfile.mock-crm  init-db.sql
docs/: requirements_app.md
mock_crm/: __init__.py  main.py
