[project]
name = "certobot"
version = "0.1.0"
description = "Conversational AI system for debt collection via WhatsApp in Brazilian Portuguese"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    
    # Database and ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    
    # Redis for caching and sessions
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    
    # AI and Language Processing
    "pydantic-ai>=0.0.8",
    "groq>=0.4.0",  # Groq API client
    
    # Data validation and serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP client for external APIs
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Environment and configuration
    "python-dotenv>=1.0.0",
    
    # Brazilian specific libraries
    "validate-docbr>=1.10.0",  # CPF/CNPJ validation for Brazil
    "babel>=2.13.0",  # Localization support
    
    # WhatsApp and messaging
    "requests>=2.31.0",
    
    # Utilities
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "passlib[bcrypt]>=1.7.4",  # Password hashing
    "python-dateutil>=2.8.0",
    
    # Logging and monitoring
    "structlog>=23.2.0",
    "rich>=13.7.0",  # Better console output
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # For testing FastAPI
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    
    # Development tools
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "mock_crm"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
